IOS_Testing/Parallel_UITesting_XCTest/Testing failed
Testing failed:
	File '/Users/rubhatt/Library/Developer/Xcode/DerivedData/consumervenice-cysyaegfesqgdlcwbfgbfntiwqpi/Build/Products/Debug-iphonesimulator/include/WalletSdkPresentation/PFNativeWebViewOnboardingViewController.h' has been modified since the precompiled header '/var/folders/nd/ppzdzhl12g12n0_pg9s87s3h3kg_qy/T/Intents-bridging-header-b47234.pch' was built
	Clang importer creation failed
** TEST FAILED **


The following build commands failed:
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumerVeniceIntentsExtension/IntentsAppGuid.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumervenice/application/common/SharedConstants.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumerVeniceIntentsExtension/TransactionIntentResponse.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumerVeniceIntentsExtension/TransactionIntent.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumerVeniceIntentsExtension/TransactionAuthentication.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumervenice/application/module/utilities/keychain/KeyChainService.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumerVeniceIntentsUIExtension/INCurrencyAmount+WSDK.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumervenice/application/common/extensions/NSBundle+LanguageAdaptationSupport.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumerVeniceIntentsExtension/TransactionOperation.swift
	CompileSwift normal x86_64 /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumerVeniceIntentsExtension/TransactionIntentHandler.swift
	CompileSwiftSources normal x86_64 com.apple.xcode.tools.swift.compiler
(11 failures)







/Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/consumervenice/application/common/indexing/SpotlightIndexManager.swift:32:35: warning: conditional cast from 'PFNavigationTile' to 'PFNavigationTile' always succeeds
      guard let subtile = element as? PFNavigationTile else { continue }
                                  ^
<unknown>:0: error: error opening '/Users/rubhatt/Library/Developer/Xcode/DerivedData/consumervenice-cysyaegfesqgdlcwbfgbfntiwqpi/Build/Intermediates.noindex/consumervenice.build/Debug-iphonesimulator/consumervenice.build/Objects-normal/x86_64/StoreAnnotationPopupView.d' for output: No such file or directory
<unknown>:0: error: cannot open file '/Users/rubhatt/Library/Developer/Xcode/DerivedData/consumervenice-cysyaegfesqgdlcwbfgbfntiwqpi/Build/Intermediates.noindex/consumervenice.build/Debug-iphonesimulator/consumervenice.build/Objects-normal/x86_64/StoreAnnotationPopupView.dia' for diagnostics emission (No such file or directory)

LLVM ERROR: IO failure on output stream.
Command /Applications/Xcode-beta.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc failed with exit code 1
2017-06-26 14:02:21.438 xcodebuild[10475:74956] Error Domain=IDETestOperationsObserverErrorDomain Code=14 "Test operation was canceled. If you believe this error represents a bug, please attach the log file at /var/folders/nd/ppzdzhl12g12n0_pg9s87s3h3kg_qy/T/com.apple.dt.XCTest/IDETestRunSession-C6BCBAF4-728B-438C-BA61-F1E4F462ACD4/consumerveniceOnboardingUITests-20E969E0-149F-4BEC-B4C3-11F9F34B529E/Session-consumerveniceOnboardingUITests-2017-06-26_135429-07YEP9.log" UserInfo={NSLocalizedDescription=Test operation was canceled. If you believe this error represents a bug, please attach the log file at /var/folders/nd/ppzdzhl12g12n0_pg9s87s3h3kg_qy/T/com.apple.dt.XCTest/IDETestRunSession-C6BCBAF4-728B-438C-BA61-F1E4F462ACD4/consumerveniceOnboardingUITests-20E969E0-149F-4BEC-B4C3-11F9F34B529E/Session-consumerveniceOnboardingUITests-2017-06-26_135429-07YEP9.log}

Testing failed:
	Command /Applications/Xcode-beta.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc failed with exit code 1
** TEST FAILED **


The following build commands failed:
	CompileSwift normal x86_64
	CompileSwiftSources normal x86_64 com.apple.xcode.tools.swift.compiler







CpResource DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/WalletSdkI18nBundle.bundle DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/PayPal.app/WalletSdkI18nBundle.bundle
    cd /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios
    export PATH="/Applications/Xcode-beta.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/usr/bin:/Applications/Xcode-beta.app/Contents/Developer/usr/bin:/Library/Frameworks/Python.framework/Versions/3.6/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Users/rubhatt/.rvm/bin"
    builtin-copy -exclude .DS_Store -exclude CVS -exclude .svn -exclude .git -exclude .hg -resolve-src-symlinks /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/WalletSdkI18nBundle.bundle /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/PayPal.app
error: remove /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/PayPal.app/WalletSdkI18nBundle.bundle: Directory not empty
error: couldn't remove '/Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/PayPal.app/WalletSdkI18nBundle.bundle' after command failed: Directory not empty

2017-06-26 16:29:48.701 xcodebuild[11440:86513] Error Domain=IDETestOperationsObserverErrorDomain Code=14 "Test operation was canceled. If you believe this error represents a bug, please attach the log file at /var/folders/nd/ppzdzhl12g12n0_pg9s87s3h3kg_qy/T/com.apple.dt.XCTest/IDETestRunSession-96C7A3A2-003F-4873-ABC5-02BD07F0F499/consumerveniceOnboardingUITests1-71D53EF0-7133-484F-81B8-39C3BD6441FE/Session-consumerveniceOnboardingUITests1-2017-06-26_162217-KhMiv3.log" UserInfo={NSLocalizedDescription=Test operation was canceled. If you believe this error represents a bug, please attach the log file at /var/folders/nd/ppzdzhl12g12n0_pg9s87s3h3kg_qy/T/com.apple.dt.XCTest/IDETestRunSession-96C7A3A2-003F-4873-ABC5-02BD07F0F499/consumerveniceOnboardingUITests1-71D53EF0-7133-484F-81B8-39C3BD6441FE/Session-consumerveniceOnboardingUITests1-2017-06-26_162217-KhMiv3.log}

Testing failed:
	error: remove /Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/PayPal.app/WalletSdkI18nBundle.bundle: Directory not empty
	error: couldn't remove '/Users/rubhatt/Documents/PayPalApp/consumer-venice-ios/DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/PayPal.app/WalletSdkI18nBundle.bundle' after command failed: Directory not empty
** TEST FAILED **


The following build commands failed:
	CpResource DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/WalletSdkI18nBundle.bundle DerivedData2/consumervenice/Build/Products/Debug-iphonesimulator/PayPal.app/WalletSdkI18nBundle.bundle